infra/security.tf
resource "aws_key_pair" "portfolio_key" {
  key_name   = "portfolio-ec2"
  public_key = file("~/.ssh/portfolio-ec2.pub")
}

resource "aws_security_group" "portfolio_sg" {
  name        = "portfolio_sg"
  description = "Autorise SSH et HTTP"

  ingress {
    description = "SSH depuis mon IP uniquement"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    description = "HTTP public"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Tout le trafic sortant autorise"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "portfolio-sg"
  }
}
